# CrawlerJus

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
api/: cache.py  enums.py  error_handlers.py  exceptions.py  router.py  schema.py
crawler_jus/: cache.py  crawler.py  exceptions.py  util.py
crawler_jus/services/: search_service.py
tests/: test_api.py  test_extractors.py  test_util.py
