[project]
name = "crawlerjus"
version = "0.1.0"
description = ""
authors = [
    {name = "pauloh7",email = "pauloh.gomes1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "redis (>=7.1.0,<8.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "curl-cffi (>=0.14.0,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"

