[tool.poetry]
name = "crawlerjus"
version = "0.1.0"
description = "API FastAPI para consulta TJRS"
authors = ["pauloh7 <pauloh.gomes1@gmail.com>"]
readme = "README.md"
packages = [{ include = "crawler_jus" }]

[tool.poetry.dependencies]
python = ">=3.10"
redis = ">=7.1.0,<8.0.0"
fastapi = ">=0.128.0,<0.129.0"
uvicorn = { extras = ["standard"], version = ">=0.40.0,<0.41.0" }
tenacity = ">=9.1.2,<10.0.0"
curl-cffi = ">=0.14.0,<0.15.0"
beautifulsoup4 = "^4.14.3"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-sugar = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"